--- a/pom.xml
+++ b/pom.xml
@@ -56,5 +56,12 @@
 	    <artifactId>json</artifactId>
 	    <version>20160810</version>
 	</dependency>
+	
+	<dependency>
+	    <groupId>jstl</groupId>
+	    <artifactId>jstl</artifactId>
+	    <version>1.2</version>
+	</dependency>
+	
   </dependencies>
 </project>
