--- a/pom.xml
+++ b/pom.xml
@@ -39,11 +39,11 @@
 	    <version>3.0.1</version>
 	</dependency>
 	
-	<dependency>
+	<!-- <dependency>
 	    <groupId>com.microsoft.sqlserver</groupId>
 	    <artifactId>sqljdbc4</artifactId>
 	    <version>4.0</version>
-	</dependency>
+	</dependency> -->
 	
 	<dependency>
 	    <groupId>mysql</groupId>
